# post-canonical

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  _pyproject.toml  example.py  pyproject.toml
docs/: CODE_REVIEW_2026-04-28.md  RESEARCH_EXTENSIONS_2026-04-28.md
src/post_canonical/: __init__.py  alphabet.py  builder.py  cli.py  post_canonical_system.py  presets.py  production_rule.py  visualization.py
src/post_canonical/core/: __init__.py  alphabet.py  errors.py  pattern.py  rule.py  variable.py
src/post_canonical/matching/: __init__.py  binding.py  inverter.py  matcher.py  unifier.py
src/post_canonical/presets/: __init__.py  examples.py
src/post_canonical/query/: __init__.py  _rule_analysis.py  bidirectional.py  critical_pairs.py  invariants.py  reachability.py  termination.py
src/post_canonical/serialization/: json_codec.py
src/post_canonical/system/: __init__.py  derivation.py  executor.py  pcs.py
src/post_canonical/visualization/: __init__.py  _proof_dag.py  ascii_tree.py  dot.py  latex.py  mermaid.py
tests/: conftest.py  test_bidirectional.py  test_builder.py  test_cli.py  test_critical_pairs.py  test_executor.py  test_invariants.py  test_pcs.py  test_properties.py  test_reachability.py  test_serialization.py  test_termination.py  test_visualization.py
