[project]
name = "post-canonical"
version = "2.0.0"
description = "Post Canonical Systems - A Python implementation of Emil Post's formal string rewriting systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.11.13",
]

[tool.mypy]
python_version = "3.12"
use_strict = true

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []